# papis-extract

./: .gitignore  .markdownlint.yaml  .papis.config  CHANGELOG.md  README.md  ROADMAP  pyproject.toml
.woodpecker/: lint.yml  static_analysis.yml  test.yml
papis_extract/: __init__.py  annotation.py  annotation_data.py  exceptions.py  exporter.py  extraction.py  extractor.py  formatter.py  templating.py
papis_extract/exporters/: __init__.py  notes.py  stdout.py
papis_extract/extractors/: __init__.py  pdf.py  pocketbook.py  readera.py  readest.py
papis_extract/model/: templating.py
tests/: test_annotation.py  test_formatting.py
tests/extractors/: ReadEra_sample.txt  test_readera.py
tests/resources/: ReadEra_sample.txt  Readest_sample.txt
