[project]
authors = [
    {name = "Marty Oehme", email = "contact@martyoeh.me"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "pymupdf<2.0.0,>=1.24.2",
    "levenshtein<1.0.0,>=0.25.1",
    "papis<1.0,>=0.13",
    "click<9.0.0,>=8.1.7",
    "python-magic<1.0.0,>=0.4.27",
    "chevron<1.0.0,>=0.14.0",
]
name = "papis-extract"
version = "0.2.0"
description = ""
readme = "README.md"
keywords = [
    "papis",
    "pdf",
    "biblatex",
    "bibtex",
    "bibliography",
    "reference manager",
    "research",
    "science",
]

[project.urls]
homepage = "https://git.martyoeh.me/Marty/papis-extract"
repository = "https://github.com/marty-oehme/papis-extract"

[project.entry-points."papis.command"]
extract = "papis_extract:main"

[project.optional-dependencies]
whoosh = [
    "whoosh<3.0.0,>=2.7.4",
]
pocketbook = [
    "beautifulsoup4<5.0.0,>=4.12.3",
]

[tool.uv]
dev-dependencies = [
    "pytest<9.0.0,>=8.0.0",
    "pytest-cov<7.0.0,>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
