[project]
authors = [{ name = "Marty Oehme", email = "contact@martyoeh.me" }]
license = { text = "GPL-3.0-or-later" }
requires-python = "<4.0,>=3.10"
dependencies = [
    "pymupdf<2.0.0,>=1.24.2",
    "levenshtein<1.0.0,>=0.25.1",
    "papis<1.0,>=0.14",
    "click<9.0.0,>=8.1.7",
    "python-magic<1.0.0,>=0.4.27",
    "chevron<1.0.0,>=0.14.0",
]
name = "papis-extract"
version = "0.2.1"
description = ""
readme = "README.md"
keywords = [
    "papis",
    "pdf",
    "biblatex",
    "bibtex",
    "bibliography",
    "reference manager",
    "research",
]

[project.urls]
homepage = "https://git.martyoeh.me/Marty/papis-extract"
repository = "https://github.com/marty-oehme/papis-extract"

[project.entry-points."papis.command"]
extract = "papis_extract:main"

[project.optional-dependencies]
whoosh = ["whoosh<3.0.0,>=2.7.4"]
pocketbook = ["beautifulsoup4<5.0.0,>=4.12.3"]

[tool.uv]
dev-dependencies = ["pytest<9.0.0,>=8.0.0", "pytest-cov<7.0.0,>=6.0.0"]

[tool.ruff.lint]
extend-select = [
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "F",   # Pyflakes rules
    "FA",  # Enforce from __future__ import annotations
    "I",   # Sort imports properly
    "ICN", # Use common import conventions
    "ISC", # Good use of string concatenation
    "NPY", # Some numpy-specific things
    "PTH", # Use pathlib instead of os.path
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "TID", # Some good import practices
    "UP",  # Warn if certain things can changed due to newer Python versions
    "W",   # PyCodeStyle warnings
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
filterwarnings = [
    # see https://github.com/swig/swig/issues/2881#issuecomment-2877988848
    # should hopefully be redundant with swig-4.4
    "ignore:.*builtin type SwigPy\\w* has no __module__ attribute.*:DeprecationWarning",
    "ignore:.*builtin type swigvarlink has no __module__ attribute.*:DeprecationWarning"
]
